--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,16 @@
 page-home {
 
+h1{
+    text-align: center;
+}
+
+img{
+    width: 450px;
+    align-self: center;
+    margin: auto;
+    display: block;
+    padding: 10px;
+}
+
+
 }
